// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen > should return a render function only with element 1`] = `
"const { createElementVNode: _createElementVNode } = Vue
return function render(_ctx) {
  return _createElementVNode(\\"div\\")
}"
`;

exports[`codegen > should return a render function with compound node 1`] = `
"const { createElementVNode: _createElementVNode, toDisplayString: _toDisplayString } = Vue
return function render(_ctx) {
  return _createElementVNode(\\"div\\", null, \\"hello \\" + _toDisplayString(_ctx.message))
}"
`;

exports[`codegen > should return a render function with compound node 2 1`] = `
"const { createElementVNode: _createElementVNode, toDisplayString: _toDisplayString } = Vue
return function render(_ctx) {
  return _createElementVNode(\\"div\\", null, [_createElementVNode(\\"span\\", null, \\"hello \\"), _toDisplayString(_ctx.message)])
}"
`;

exports[`codegen > should return a render function with element nested with text 1`] = `
"const { createElementVNode: _createElementVNode } = Vue
return function render(_ctx) {
  return _createElementVNode(\\"div\\", null, \\"hello world\\")
}"
`;

exports[`codegen > should return a render function with interpolation 1`] = `
"const { toDisplayString: _toDisplayString } = Vue
return function render(_ctx) {
  return _toDisplayString(_ctx.message)
}"
`;

exports[`codegen > should return a render function with text 1`] = `
"return function render(_ctx) {
  return \\"hello world\\"
}"
`;
